--- a/Sarkar-Tang-replication-specific-functions.Rmd
+++ b/Sarkar-Tang-replication-specific-functions.Rmd
@@ -129,7 +129,7 @@ get_regression_model(n = 100, d = 10, a = 2, num_true_signals = 1)
 
 
 ```{r}
-sarkar_tang_method1 <- function(X, Y, alpha){
+sarkar_tang_method1 <- function(X, Y, alpha = .05){
   d <- ncol(X)
   nu <- nrow(X) - 2 * d # n - 2d assuming n > 2d
   T1 <- get_T_1(X, Y)
