--- a/ep-BH-procedure-setting2-different-exponents.Rmd
+++ b/ep-BH-procedure-setting2-different-exponents.Rmd
@@ -80,6 +80,9 @@ ep_method1_1_8_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/8)
 
 
 
+
+
+
 # Graphs for setting 2 simulations
 
 
@@ -89,7 +92,7 @@ ggplot(ep_method1_0_setting2, aes(x = a, y = power)) +
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
   scale_y_continuous(limits = c(0, 1)) +
-  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 1 (n = 500, d = 50, k = 10)')
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 0 (n = 500, d = 50, k = 10)')
 ```
 
 ```{r}
@@ -100,5 +103,27 @@ ggplot(ep_method1_0_setting2, aes(x = a, y = fdr)) +
   scale_y_continuous(limits = c(0, .15)) +
   labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 0 (n = 500, d = 50, k = 10)')
 ```
+
+
+```{r}
+# Setting 1 Power
+ggplot(ep_method1_1_16_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 1/16 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 1 FDR
+ggplot(ep_method1_1_16_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 1/16 (n = 500, d = 50, k = 10)')
+```
+
+
 
 
