--- a/ep-BH-procedure-setting2-different-exponents.Rmd
+++ b/ep-BH-procedure-setting2-different-exponents.Rmd
@@ -78,7 +78,22 @@ ep_method1_1_8_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/8)
 ```
 
 
+```{r}
+ep_method1_1_4_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/4)
+```
 
+
+```{r}
+ep_method1_3_4_setting2 <- run_ep_method1_setting2_simulation(exponent = 3/4)
+```
+
+```{r}
+ep_method1_9_10_setting2 <- run_ep_method1_setting2_simulation(exponent = 9/10)
+```
+
+```{r}
+ep_method1_1_setting2 <- run_ep_method1_setting2_simulation(exponent = 1)
+```
 
 
 
@@ -87,7 +102,7 @@ ep_method1_1_8_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/8)
 
 
 ```{r}
-# Setting 1 Power
+# Setting 2 Power
 ggplot(ep_method1_0_setting2, aes(x = a, y = power)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
@@ -96,7 +111,7 @@ ggplot(ep_method1_0_setting2, aes(x = a, y = power)) +
 ```
 
 ```{r}
-# Setting 1 FDR
+# Setting 2 FDR
 ggplot(ep_method1_0_setting2, aes(x = a, y = fdr)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
@@ -106,7 +121,7 @@ ggplot(ep_method1_0_setting2, aes(x = a, y = fdr)) +
 
 
 ```{r}
-# Setting 1 Power
+# Setting 2 Power
 ggplot(ep_method1_1_16_setting2, aes(x = a, y = power)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
@@ -116,13 +131,117 @@ ggplot(ep_method1_1_16_setting2, aes(x = a, y = power)) +
 
 
 ```{r}
-# Setting 1 FDR
+# Setting 2 FDR
 ggplot(ep_method1_1_16_setting2, aes(x = a, y = fdr)) + 
   geom_line(color = 'red') +
   geom_point(shape = 4, color = 'red') + 
   scale_y_continuous(limits = c(0, .15)) +
   labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 1/16 (n = 500, d = 50, k = 10)')
 ```
+
+
+```{r}
+# Setting 2 Power
+ggplot(ep_method1_1_8_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 1/8 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 FDR
+ggplot(ep_method1_1_8_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 1/8 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 Power
+ggplot(ep_method1_1_4_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 1/4 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 FDR
+ggplot(ep_method1_1_4_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 1/4 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 Power
+ggplot(ep_method1_3_4_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 3/4 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 FDR
+ggplot(ep_method1_3_4_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 3/4 (n = 500, d = 50, k = 10)')
+```
+
+```{r}
+# Setting 2 Power
+ggplot(ep_method1_9_10_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 9/10 (n = 500, d = 50, k = 10)')
+```
+
+
+
+```{r}
+# Setting 2 FDR
+ggplot(ep_method1_9_10_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 9/10 (n = 500, d = 50, k = 10)')
+```
+
+
+```{r}
+# Setting 2 Power
+ggplot(ep_method1_1_setting2, aes(x = a, y = power)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated Power', title = 'ep Method 1 Setting 2 Results - exponent = 1 (n = 500, d = 50, k = 10)')
+```
+
+
+
+```{r}
+# Setting 2 FDR
+ggplot(ep_method1_1_setting2, aes(x = a, y = fdr)) + 
+  geom_line(color = 'red') +
+  geom_point(shape = 4, color = 'red') + 
+  scale_y_continuous(limits = c(0, .15)) +
+  labs(x = 'Signal Strength - Amplitude', y = 'Simulated FDR', title = 'ep Method 1 Setting 2 Results - exponent = 1 (n = 500, d = 50, k = 10)')
+```
+
+
+
 
 
 
