Small changes - added the libraries to the other documents and set the seed throughout

--- a/ep-BH-procedure.Rmd
+++ b/ep-BH-procedure.Rmd
@@ -9,6 +9,12 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+library(knockoff)
+library(pracma)
+library(tidyverse)
+```
+
 # ep BH procedure
 
 ```{r}
