--- a/ep-BH-procedure-Setting3.Rmd
+++ b/ep-BH-procedure-Setting3.Rmd
@@ -9,6 +9,11 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+library(knockoff)
+library(pracma)
+library(tidyverse)
+```
 
 # Setting 3 function
 
@@ -38,32 +43,39 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 # Setting 3 simulations
 
 ```{r}
+set.seed(12)
 ep_method1_0_setting3 <- run_ep_method1_setting3_simulation(exponent = 0)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_16_setting3 <- run_ep_method1_setting3_simulation(exponent = 1/16)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_8_setting3 <- run_ep_method1_setting3_simulation(exponent = 1/8)
 ```
 
 
 ```{r}
+set.seed(12)
 ep_method1_1_4_setting3 <- run_ep_method1_setting3_simulation(exponent = 1/4)
 ```
 
 
 ```{r}
+set.seed(12)
 ep_method1_3_4_setting3 <- run_ep_method1_setting3_simulation(exponent = 3/4)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_9_10_setting3 <- run_ep_method1_setting3_simulation(exponent = 9/10)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_setting3 <- run_ep_method1_setting3_simulation(exponent = 1)
 ```
 
