--- a/ep-BH-procedure-setting2-different-exponents.Rmd
+++ b/ep-BH-procedure-setting2-different-exponents.Rmd
@@ -9,6 +9,12 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+library(knockoff)
+library(pracma)
+library(tidyverse)
+```
+
 # Write some functions to save space
 
 ```{r}
@@ -66,32 +72,39 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 
 
 ```{r}
+set.seed(12)
 ep_method1_0_setting2 <- run_ep_method1_setting2_simulation(exponent = 0)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_16_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/16)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_8_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/8)
 ```
 
 
 ```{r}
+set.seed(12)
 ep_method1_1_4_setting2 <- run_ep_method1_setting2_simulation(exponent = 1/4)
 ```
 
 
 ```{r}
+set.seed(12)
 ep_method1_3_4_setting2 <- run_ep_method1_setting2_simulation(exponent = 3/4)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_9_10_setting2 <- run_ep_method1_setting2_simulation(exponent = 9/10)
 ```
 
 ```{r}
+set.seed(12)
 ep_method1_1_setting2 <- run_ep_method1_setting2_simulation(exponent = 1)
 ```
 
