--- a/cknockoff-simulations.Rmd
+++ b/cknockoff-simulations.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Sarkar Tang method 1 setting 1"
+title: "cknockoff-sims"
 author: "Ethan Naegele"
-date: "2024-06-20"
+date: "2024-08-02"
 output: pdf_document
 ---
 
@@ -10,24 +10,21 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(knockoff)
-library(pracma)
-library(tidyverse)
-```
-
-This document runs the same simulations that were in the Sarkar-Tang-replication-specific-functions file but now with a corrected function for the variance parameter estimate, where the linear model does not try to calculate an intercept term. We also run the simulations using wrapper functions to save space. 
-
-```{r}
-run_method1_simulation <- function(n, d, a, num_true_sigs, equicor = TRUE, num_iter = 300){
+run_CKnockoffs_simulation <- function(type = 'MCC', n, d, a, num_true_sigs, alpha = .05, num_iter = 500){
   # Sets up the regression problem with specified dimensions and number of true signals, all of which have
   # the same amplitude. 
+  # Runs the simulation by generating the regression problems and then runs CONDITIONAL KNOCKOFFS 
+  
   fdp_vec <- numeric(num_iter)
 pwr_vec <- c(num_iter)
 for (m in 1:num_iter){
   feature_indices <- 1:d
-  regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs)
+  regression <- get_regression_model(n = n, d = d, a = a, num_true_signals = num_true_sigs, random_true_signal_indices = TRUE)
   true_nonzero_indices <- regression$nonzero_indices
-  rejected_indices <- sarkar_tang_method1(regression$X, regression$Y, alpha = .05, equicor = equicor)
+  rejected_indices <- cknockoff(regression$X, 
+                                regression$Y,
+                                intercept = FALSE,
+                                alpha = alpha)$selected
   num_rejections <- length(rejected_indices)
   num_correct_rejections <- length(intersect(rejected_indices, true_nonzero_indices))
   num_false_rejections <- length(intersect(feature_indices[-true_nonzero_indices], rejected_indices))
@@ -41,12 +38,12 @@ return(list(fdr = fdr, power = pwr))
 ```
 
 ```{r}
-run_sarkar_tang_method1_setting1_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
+run_CKnockoffs_setting1_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
-  result <- run_method1_simulation(n = 200,
+  result <- run_CKnockoffs_simulation(n = 200,
                                           d = 40,
                                           a = amp, 
                                           num_true_sigs = 8,
@@ -58,14 +55,13 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 }
 ```
 
-
 ```{r}
-run_sarkar_tang_method1_setting2_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
+run_CKnockoffs_setting2_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
-  result <- run_method1_simulation(n = 500,
+  result <- run_CKnockoffs_simulation(n = 500,
                                           d = 50,
                                           a = amp, 
                                           num_true_sigs = 10,
@@ -77,13 +73,14 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 }
 ```
 
+
 ```{r}
-run_sarkar_tang_method1_setting3_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
+run_CKnockoffs_setting3_simulation <- function(a_vec = c(2, 4, 6, 8, 10), 
                                                num_iter = 500){
 result_vec_power <- c()
 result_vec_fdr <- c()
 for (amp in a_vec){
-  result <- run_method1_simulation(n = 1000,
+  result <- run_CKnockoffs_simulation(n = 1000,
                                           d = 100,
                                           a = amp, 
                                           num_true_sigs = 20,
@@ -95,22 +92,30 @@ return(data.frame(a = a_vec, power = result_vec_power, fdr = result_vec_fdr))
 }
 ```
 
-```{r}
-# this runs the same simulation as before in Sarkar-Tang-replication-specific-functions but now uses the correct linear model when estimating the variance parameter; now the linear model does not try to calculate the intercept term
-set.seed(12)
-method1_setting1_v2 <- run_sarkar_tang_method1_setting1_simulation()
-```
-
 
 ```{r}
-set.seed(12)
-method1_setting2_v2 <- run_sarkar_tang_method1_setting2_simulation()
+# kth moment of F(1, n) distribution limit as n to infinity
+f_distribution_kth_moment_limit <- function(k){
+  return(2^k * gamma(.5 + k) / sqrt(pi))
+}
+  
 ```
 
 ```{r}
-set.seed(12)
-method1_setting3_v2 <- run_sarkar_tang_method1_setting3_simulation()
+f_distribution_kth_moment_limit(1)
+f_distribution_kth_moment_limit(2)
+f_distribution_kth_moment_limit(3)
+f_distribution_kth_moment_limit(4)
+f_distribution_kth_moment_limit(5)
+f_distribution_kth_moment_limit(6)
 ```
-
+```{r}
+DoubleFactorial(1)
+DoubleFactorial(3)
+DoubleFactorial(5)
+DoubleFactorial(7)
+DoubleFactorial(9)
+DoubleFactorial(11)
+```
 
 
